app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
   font-size: 100%;
}

svg {
   @apply shrink-0;
}

b,
strong {
   @apply font-medium;
}

.image-wrapper {
   @apply my-3.5;
   @apply max-w-96;
}

.image-link {
   @apply inline-block;
}

.image-link img {
   @apply m-0;
}

.proseStyling {
   @apply prose-a:text-blue-500 hover:prose-a:underline dark:prose-a:text-violet-400;
   @apply prose-img:max-w-full;
   @apply prose-img:rounded-xl prose-img:border prose-img:bg-gray-50 prose-img:transition-transform prose-img:ease-out hover:prose-img:scale-103 dark:prose-img:border-stone-700 dark:prose-img:bg-stone-800;
   @apply prose-ul:ml-4 prose-ul:list-inside prose-ul:list-disc prose-ul:p-0 prose-li:m-0 prose-li:p-0;
   @apply prose-ol:ml-0 prose-ol:list-inside prose-ol:list-decimal prose-ol:p-0 prose-li:m-0 prose-li:p-0;
   @apply prose-blockquote:border-l-2 dark:prose-blockquote:border-stone-800;
   @apply prose-headings:mb-0 prose-headings:mt-5 prose-headings:font-lora prose-h2:text-[1.25em] prose-h3:text-[1.125em] prose-h4:text-[1.0625em] prose-h5:text-[1.03125em] prose-h6:text-[1em];
   @apply prose-code:rounded-lg prose-code:bg-slate-100 prose-code:px-1 prose-code:py-0.5 prose-code:text-[calc(1em-1px)] dark:prose-code:bg-stone-800;
}

code {
   font-family: commit_mono, monospace;
}

.prose-sm * {
   @apply leading-5;
}

.prose-sm {
   p,
   blockquote,
   ul {
      @apply my-3.5;
   }

   .footnotes {
      @apply my-3.5;
   }

   .footnotes hr {
      @apply hidden;
   }

   .footnotes ol {
      @apply ps-0;
   }

   .footnotes p {
      @apply m-0;
   }

   ol > li {
      @apply leading-6;
   }

   ul > li {
      @apply leading-6;
   }

   li > ul {
      @apply my-0;
   }
}

.prose-convo {
   p,
   ul {
      @apply mt-[.5em];
   }

   p:not(:last-child),
   img:not(:last-child),
   ul:not(:last-child) {
      @apply mb-[.5em];
   }

   @apply text-[1em];
}

.prose-sm *,
.prose-convo * {
   text-wrap: pretty;
}

.btn-sm {
   @apply flex;
   @apply w-max;
   @apply items-center;
   @apply justify-between;
   @apply gap-2;
   @apply rounded-lg;
   @apply border;
   @apply dark:border-stone-700;
   @apply dark:bg-stone-950;
   @apply px-2;
   @apply py-1;
   @apply text-sm;
   @apply shadow-sm;
   @apply transition-transform;
   @apply ease-out;
   @apply hover:scale-103;
}

.btn-xs {
   @apply flex;
   @apply w-max;
   @apply items-center;
   @apply justify-between;
   @apply gap-2;
   @apply rounded-lg;
   @apply border;
   @apply dark:border-stone-700;
   @apply dark:bg-stone-950;
   @apply px-1.5;
   @apply py-0.5;
   @apply text-[calc(1em-1px)];
   @apply shadow-sm;
   @apply transition-transform;
   @apply ease-out;
   @apply hover:scale-[1.015];
}

.details-dropdown {
   @apply cursor-pointer;
   @apply select-none;

   list-style-type: " ";
   @apply bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzljYTNhZiI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtOC4yNSA0LjUgNy41IDcuNS03LjUgNy41IiAvPgo8L3N2Zz4K)];
   @apply dark:bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzc4NzE2YyI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtOC4yNSA0LjUgNy41IDcuNS03LjUgNy41IiAvPgo8L3N2Zz4K)];
   @apply bg-no-repeat;
   background-position: left center;
   background-size: 0.9em;

   @apply pl-[12px];
   @apply -ml-[4px];
}

/* Safari-only padding adjustment */
_::-webkit-full-page-media,
_:future,
:root .details-parent-li {
   @apply ml-0;
}

_::-webkit-full-page-media,
_:future,
:root .details-dropdown {
   @apply pl-[calc(1em+10px)];
}

_::-webkit-full-page-media,
_:future,
:root .details-parent-li details ul {
   @apply ml-8;
}

details[open] > .details-dropdown {
   @apply bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzljYTNhZiI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtMTkuNSA4LjI1LTcuNSA3LjUtNy41LTcuNSIgLz4KPC9zdmc+Cg==)];
   @apply dark:bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzc4NzE2YyI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtMTkuNSA4LjI1LTcuNSA3LjUtNy41LTcuNSIgLz4KPC9zdmc+Cg==)];
}

.details-dropdown::-webkit-details-marker,
.dropdown-details::marker {
   display: none;
}

.rl-container a {
   @apply hover:no-underline;
}

.rl-container blockquote {
   @apply flex;
   @apply flex-col;
   @apply gap-3;
   @apply p-4;
   @apply bg-gray-50;
   @apply dark:bg-stone-800;
   @apply border;
   @apply border-gray-100;
   @apply dark:border-stone-700;
   @apply rounded-xl;
   @apply transition-transform;
   @apply ease-out;
   @apply hover:scale-103;
   @apply text-gray-800;
   @apply dark:text-stone-300;
   @apply leading-5;
   @apply w-full;
}

.rl-snippet {
   @apply mt-0 !important;
   @apply mb-0 !important;
   @apply text-gray-500;
   @apply dark:text-stone-500;
}

.rl-metadata {
   @apply flex;
   @apply items-center;
   @apply shrink;
   @apply gap-3;
   @apply justify-between;
   @apply w-full;
}

.rl-metadata > footer {
   @apply flex;
   @apply flex-col;
   @apply gap-1;
   @apply w-fit;
   @apply max-w-[90%];
}

.rl-title {
   @apply font-normal-mid;
}

.rl-metadata > svg {
   @apply w-[calc(1.25rem-2px)];
   @apply h-[calc(1.25rem-2px)];
   @apply max-[320px]:hidden;
}

.rl-container blockquote:hover .rl-metadata > svg {
   @apply text-blue-500;
   @apply dark:text-violet-500;
}

.rl-url-container {
   @apply flex;
   @apply flex-row;
   @apply items-center;
   @apply gap-2;
   @apply overflow-hidden;
}

.rl-url-container > svg {
   @apply w-3.5;
   @apply h-3.5;
}

.rl-url {
   @apply not-italic;
   @apply text-gray-700;
   @apply dark:text-stone-400;
   @apply truncate;
   @apply max-w-full;
   @apply md:max-w-[345px];
   @apply lg:max-w-[499px];
   @apply xl:max-w-[585px];
}

